# rust-notify

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: .env  main.rs
