[package]
authors = ["Arth Tyagi <arthtyagi7@gmail.com>"]
edition = "2021"
name = "rust-notify"
version = "0.1.0"

[features]

[dependencies]
anyhow = "1.0.57"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.1", features = ["full"] }
toml = "0.5.9"

