[package]
authors = ["Arth Tyagi <arthtyagi7@gmail.com>"]
edition = "2021"
name = "rust-notify"
version = "0.1.0"

[features]

[dependencies]
anyhow = "1.0.57"
lettre = "0.9.6"
lettre_email = "0.9.4"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tera = "1.15.0"
tokio = { version = "1.18.1", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

